# libepoxy

./: README.md  configure.ac  meson.build  meson_options.txt
cross/: fedora-mingw64.txt
include/: meson.build
include/epoxy/: egl.h  gl.h  glx.h
src/: Makefile.am  dispatch_common.c  dispatch_common.h  gen_dispatch.py  meson.build
test/: meson.build
